fix: change auth login tokens into cookie headers
